# excalia-autovote

./: .env.exemple  README.md  pyproject.toml  run_vote.py
src/excalia_autovote/: config.py  main.py  vote_sites.py
